# sphinxawesome-theme

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .tool-versions  .vale.ini  CHANGELOG.md  CHANGELOG.rst  LICENSE  README.md  README.rst  constraints.txt  mise.toml  mypy.ini  netlify.toml  noxfile.py  pyproject.toml  requirements.txt  samp_directive.py
.github/: dependabot.yml
.github/crawler/: settings.json  sphinxawesome.star
.github/workflows/: assets.yml  assign.yml  ci.yml  codeql.yml  constraints.txt  crawler.yml  index.yml  linkcheck.yml  links.yml  lint-docs-true.yml  lint-docs.yml  lint-true.yml  lint.yml  mini-crawler.yml  release.yml
.vale/styles/18F/: Abbreviations.yml  Clarity.yml  UnexpandedAcronyms.yml
.vale/styles/Awesome/: Flesch-Kincaid.yml  Smog.yml  SpellCheck.yml
.vale/styles/Google/: AMPM.yml  Acronyms.yml  Colons.yml  Contractions.yml  DateFormat.yml  Ellipses.yml  EmDash.yml  EnDash.yml  Exclamation.yml  FirstPerson.yml  Gender.yml  GenderBias.yml  HeadingPunctuation.yml  Headings.yml  Latin.yml  LyHyphens.yml  OptionalPlurals.yml  Ordinal.yml  OxfordComma.yml  Parens.yml  Passive.yml  Periods.yml  Quotes.yml  Ranges.yml  Semicolons.yml  Slang.yml  Spacing.yml  Spelling.yml  Units.yml  We.yml  Will.yml  WordList.yml
.vale/styles/proselint/: DateCase.yml  Needless.yml  Typography.yml
docs/: .env.example  Makefile  _redirects  about.md  about.rst  admonitions.rst  api.rst  code.rst  conf.py  development.rst  glossary.rst  how-to.rst  index.md  index.rst  readthedocs.txt  robots.txt  text.rst  update.md
docs/_static/: feedback.css  feedback.js
docs/_templates/: about.html  feedback.html  layout.html  no-toc.html  page.html
docs/changelog/: index.rst
docs/changelog/includes/: 2.0.rst  3.0.rst  4.0.rst  5.0.rst  5.2.rst  6.0.rst
docs/demo/: admonitions.rst  auto.rst  code-blocks.rst  code.rst  code_test.rst  contents.rst  figures.rst  footnotes.rst  inline-code.rst  lists.rst  math.rst  myst-nb.md  notes.rst  notoc.rst  sphinx-design.rst  text.rst
docs/demo/includes/: design-badges.rst  design-cards.rst  design-dropdown.rst  design-grid.rst  design-tabs.rst  notes-admonitions.rst  notes-version-changes.rst
docs/docs/: install-development.rst  install-python.rst  install.rst  modify.rst  use.rst
docs/how-to/: add.rst  build-your-own.md  build-your-own.rst  configure.rst  customize.md  customize.rst  install-development.rst  install.md  install.rst  load.md  modify.md  modify.rst  options.md  options.rst  update.md  use.md  use.rst  using.md
docs/how-to/add/: index.rst
docs/how-to/build-your-own/: index.rst
docs/how-to/configure/: index.rst
docs/how-to/customize/: add-custom-css.rst  add-custom-js.rst  add-custom-templates.rst  css.rst  index.rst  syntax-highlighting.rst  templates.rst
docs/how-to/install/: index.rst
docs/includes/: header.rst
docs/src/: api.py
docs/test/: output.json  output.txt
docs/test/.doctrees/: about.doctree  development.doctree  environment.pickle  how-to.doctree  index.doctree
netlify/functions/: trigger-crawl.mjs
sphinxawesome_theme/: __init__.py  breadcrumbs.html  buttons.html  copyright.html  footer.html  header.html  input.html  layout.html  main.html  modals.html  nav.html  search-pane.html  search.html  theme.conf
sphinxawesome_theme/static/: theme.css  theme.js
src/: README.md  README.rst
src/sphinxawesome_theme/: README.rst  __init__.py  admonition_ids.py  admonitions_ids.py  breadcrumbs.html  builder.py  buttons.html  code.py  copyright.html  deprecated.py  docsearch.py  footer.html  genindex.html  header.html  highlighting.py  html_translator.py  icons.py  jinja_filter.py  jinja_filters.py  jinja_functions.py  jsonimpl.py  layout.html  logo.html  logos.py  main.html  menu.html  modals.html  nav.html  page.html  permalinks_backport.py  postprocess.py  prev_next.html  scrolltop.html  search-pane.html  search.html  searchbox.html  sidebar.html  sidebar_logo.html  sidebar_main_nav_links.html  sidebar_toc.html  (+7 more)
src/sphinxawesome_theme/static/: awesome-docsearch.css  awesome-myst-nb.css  awesome-myst-nb.js  awesome-sphinx-design.04e01e4f8550b2b16196.css  awesome-sphinx-design.133ad34cbebb37fffdbf.css  awesome-sphinx-design.1f259faef3ea411b3ab5.css  awesome-sphinx-design.css  awesome-sphinx-design.f3507627e0af8330cfa7.css  awesome-sphinx-design.js  docsearch.0a12f6a71ac4aec386e9.css  docsearch.1f911b9349019cc4b48c.js  docsearch.1f911b9349019cc4b48c.js.LICENSE.txt  docsearch.242cb97ca074267b80a2.css  docsearch.384384fa24d7eb67d6f8.css  docsearch.3912ae2ddd6e9076a255.css  docsearch.3d7de4392c882a5941c0.css  docsearch.41a9115c5f7cc5abbbdc.css  docsearch.445222223e83896718c6.css  docsearch.514aefb85d9081d2c28c.js  docsearch.53fd9b1f714dc336c99c.js  docsearch.56cfe8d88b550428f360.js  docsearch.56cfe8d88b550428f360.js.LICENSE.txt  docsearch.5c8e67e372cc19a8aac8.css  docsearch.65e2a669734674c174f5.css  docsearch.6bf6e300e4da31eb9baf.css  docsearch.747e06d877e8e1c7adc3.css  docsearch.7854fe2d6ce5cfc33d76.js  docsearch.7854fe2d6ce5cfc33d76.js.LICENSE.txt  docsearch.785619191bb218087918.css  docsearch.82e38f6cd0ccc11d77d4.css  (+183 more)
src/theme-src/: .eslintrc.js  .prettierrc  README.rst  app.js  biome.json  package.json  pnpm-lock.yaml  postcss.config.js  postcss.config.ts  prettier.config.js  rspack.config.mjs  rspack.config.ts  stylelint.config.js  tailwind.config.js  webpack.config.js
tests/: README.md  __init__.py  conftest.py  test_admonition_id.py  test_admonition_ids.py  test_basic.py  test_canonical.py  test_codeblocks.py  test_collapsible.py  test_copyright.py  test_deprecated.py  test_extensions.py  test_external_links.py  test_headerlinks.py  test_highlighting.py  test_html_translator.py  test_icons.py  test_logos.py  test_packaging.py  test_permalinks.py  test_postprocess.py  test_scrolltop.py  test_sphinxawesome_theme.py  test_theme_options.py  util.py
tests/test-root/: index.rst
theme-src/: package.json  postcss.config.js  tailwind.config.js  webpack.config.js
theme-src/src/: fonts.css  theme-custom.css  theme-src.css  theme-src.js
utils/: release.md
(+109 files in other folders)
