[project]
name = "sphinxawesome-theme"
version = "6.0.0"
description = "An awesome theme for the Sphinx documentation generator"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Kai Welke", email = "kai687@pm.me" }]
classifiers = [
  "Framework :: Sphinx",
  "Framework :: Sphinx :: Theme",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Documentation",
  "Topic :: Documentation :: Sphinx",
  "Topic :: Software Development :: Documentation",
]
dependencies = [
  "beautifulsoup4>=4.9.1,<5",
  "sphinx>7,<10",
]

[project.urls]
documentation = "https://sphinxawesome.xyz"
homepage = "https://sphinxawesome.xyz"
issues = "https://github.com/kai687/sphinxawesome-theme/issues"
repository = "https://github.com/kai687/sphinxawesome-theme"

[project.entry-points."sphinx.html_themes"]
sphinxawesome_theme = "sphinxawesome_theme"

[dependency-groups]
dev = [
  "coverage[toml]",
  "pyright",
  "pytest",
  "pytest-cov",
  "ruff",
  "types-beautifulsoup4",
  "types-docutils",
  "types-pygments",
]
docs = [
  "myst-nb",
  "python-dotenv",
  "sphinx-autoapi",
  "sphinx-autobuild",
  "sphinx-design",
  "sphinx-docsearch",
  "sphinx-sitemap",
]
netlify = [
  "hatch",
  "uv",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["src"]
dev-mode-dirs = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["sphinxawesome_theme"]

[tool.hatch.build.targets.sdist]
packages = ["src/sphinxawesome_theme"]

[tool.hatch.envs.default]
installer = "uv"

[tool.hatch.envs.docs]
dependency-groups = ["docs"]

[tool.hatch.envs.docs.scripts]
build = "sphinx-build -b dirhtml -aWTE docs docs/public"
live = "sphinx-autobuild -q -b dirhtml -A mode='development' -aTE docs docs/public --ignore docs/jupyter_execute --ignore docs/public"
links = "sphinx-build -b linkcheck -aWTE docs docs/public/_links"

[tool.hatch.envs.dev]
dependency-groups = ["docs", "dev"]

[tool.hatch.envs.dev.scripts]
test = "pytest --cov"
lint = "ruff check ."
typecheck = "pyright"
all = ["test", "lint", "typecheck"]

[tool.hatch.envs.netlify]
dependency-groups = ["netlify"]

[tool.hatch.envs.netlify.scripts]
export = "uv export --no-hashes --python=3.14 --group=docs --group=netlify --output-file=requirements.txt"

[tool.hatch.envs.hatch-static-analysis]
config-path = "none"

[tool.pyright]
include = ["src"]
reportUnnecessaryTypeIgnoreComment = "warning"

[tool.ruff.lint]
# TODO: Check if all of these even make sense
select = [
  "E",
  "F",
  "B",
  "Q",
  "W",
  "I",
  "C90",
  "D",
  "UP",
  "YTT",
  "S",
  "ANN",
  "SIM",
  "N"
]
ignore = ["E501", "ANN401"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"
